[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "urchin-api"
version = "0.1.1"
description = "Async Python client for the Urchin (Coral) API — Hypixel blacklist and session statistics."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["hypixel", "bedwars", "urchin", "minecraft", "api", "blacklist", "async"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: AsyncIO",
    "Typing :: Typed",
]

dependencies = [
    "aiohttp>=3.9",
]

[project.urls]
Repository = "https://github.com/njk4401/urchin-api"
Issues     = "https://github.com/njk4401/urchin-api/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/urchin"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths    = ["tests"]
